# onboarding_slack_bot

./: .dockerignore  .env.template  Cargo.toml  Dockerfile  README.md  fly.toml
.github/workflows/: check-and-lint.yaml  test.yaml
migrations/2024-05-10-134334_create_employees_table/: down.sql  up.sql
migrations/2024-05-10-134853_create_projects_table/: down.sql  up.sql
migrations/2024-05-10-135027_create_onboardees_table/: down.sql  up.sql
migrations/2024-05-10-193019_initial_model/: down.sql  up.sql
migrations/2024-05-30-175116_create_admin_table/: down.sql  up.sql
src/: db_seed.json  main.rs  models.rs  schema.rs
src/authenticate/: mod.rs  tests.rs
src/database/: db_seeder.rs  mod.rs  tests.rs
src/event/: challenge.rs  mod.rs  team_join.rs  tests.rs  types.rs
src/models/: mod.rs
src/pg_database/: db_seeder.rs  mod.rs
src/slash_command/: ayuda_command.rs  mod.rs  nuevo_proyecto_command.rs  nuevos_command.rs  tests.rs  types.rs
src/utils/: date_to_timestamp.rs  group_employees_by_month.rs  group_members_by_month.rs  last_day_of_month.rs  load_env.rs  load_members_from_json.rs  mod.rs  parse_date_str.rs  parse_interval.rs  parse_slack_id.rs  response_templates.rs  start_of_month.rs  types.rs
