[package]
name = "onboarding_bot_slack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.33", features = ["unstable-locales"] }
redis = "0.24.0"
rocket = { version = "0.5.0", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
serde_json = "1.0.113"
